--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,8 +19,16 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flask
+        pip install flask coverage
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Run tests
+    - name: Run tests with coverage
       run: |
-        python -m unittest test_app.py
+        coverage run -m unittest test_app.py
+    - name: Generate coverage report
+      run: |
+        coverage xml -o coverage.xml
+    - name: Upload coverage report
+      uses: actions/upload-artifact@v2
+      with:
+        name: coverage-report
+        path: coverage.xml
