--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,16 +19,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flask coverage
+        pip install flask pytest pytest-cov
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Run tests with coverage
+    - name: Run tests with pytest and coverage
       run: |
-        coverage run -m unittest test_app.py
-    - name: Generate coverage report
-      run: |
-        coverage xml -o coverage.xml
-    - name: Upload coverage report
-      uses: actions/upload-artifact@v2
-      with:
-        name: coverage-report
-        path: coverage.xml
+        pytest --cov=./ --cov-report=xml
